# memwatch

./: .gitignore  CMakeLists.txt  README.md  test_memory.c
include/: memwatch.h
src/: memwatch.c
